<resources>
    <string name="app_name">Dclaro</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="inicioSesion">Inicio de sesión</string>
    <string name="rfc">RFC</string>
    <string name="contrasena">Contraseña</string>
    <string name="declaraP">Declaración provicional</string>
    <string name="obligaR">Obligaciones registradas</string>
    <string name="descLlenadoDeclaracion">Descripción de los pasos para el llenado de la declaración.</string>
    <string name="pasosLlenadoDelcaracion">1. Ingresa a cada una de las secciones siguientes y captura la información solicitada correspondiente al periodo que estás declarando. \n 2. Selecciona el botón "Enviar declaración" para realizar el envío. \n 3. Se generará el acudo de recibo de la declaración.</string>
    <string name="isr">ISR PERSONAS FÍSICAS, ACTIVIDAD EMPRESARIAL Y PROFESIONAL</string>
    <string name="iva">IMPUESTO AL VALOR AGREGADO</string>
    <string name="declaraC">Declarar en ceros</string>
    <string name="notaDeclaraC">Para poder presentar tu declaración mensual en ceros es necesario no haber presentado ninguna actividad en todo el mes. Es decir, no hacer entrega de ningún comprobante electrónico.</string>
    <string name="consultaD">Consulta de la declaración</string>
    <string name="fillRFC">RFC: PERJ201288IQ02</string>
    <string name="consultaO">Consulta de la obligación</string>
    <string name="declaraPagadas">Declaraciones pagadas</string>
    <string name="acuse">Acuse de recibo de la declaración</string>
    <string name="descISR">ISR personas físicas, actividad empresarial y profesional</string>
    <string name="descIVA">Impuesto al valor agregado</string>
    <string name="descBtnImpuesto">Determinación del impuesto</string>
    <string name="descBtnPago">Determinación del pago</string>
    <string name="restablecerContrasenia">Restablecer contraseña</string>
    <string name="especificacionesContrasenia">1. La longitud de contraseña debe ser mayor de 8 caracteres. \n2. Los únicos caracteres aceptados deben ser de la "a" a la "z" y de 0 al 9. \n3. No se acepta el RFC. \n4. No se permiten caracteres especiales. </string>
    <string name="introduceContrasenia">Introduzca su nueva contraseña</string>
    <string name="nuevaContrasenia">Nueva contraseña</string>
    <string name="repiteContrasenia">Repita su nueva contraseña</string>
    <string name="Star">Iniciar</string>
</resources>