<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/verdePaloMuyClaro"
    tools:context=".RestablecerPassActivity">


    <TextView
        android:id="@+id/tv_restablecerContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restablecerContrasenia"
        android:textColor="@color/colorElementosOscuros"
        android:textSize="28sp"
        android:fontFamily="@font/manrope_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/forma"
        android:paddingVertical="20dp"
        android:paddingHorizontal="20dp"
        android:elevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Especificaciones"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:textColor="@color/verdePaloMuyClaro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/especificacionesContrasenia"
            android:textSize="16sp"
            android:textColor="@color/verdePaloMuyClaro"
            android:fontFamily="@font/manrope_medium"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduceContrasenia"
        android:textColor="@color/colorElementosOscuros"
        android:fontFamily="@font/manrope_bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevaContrasenia"
            android:textColor="@color/colorElementosOscuros"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/manrope_medium"/>

        <EditText
            android:id="@+id/et_nuevoPassword"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/verdePaloClaro"
            android:paddingVertical="6dp"
            android:paddingHorizontal="10dp"
            android:fontFamily="@font/manrope_bold"
            android:textColor="@color/colorElementosOscuros"
            android:textColorHint="@color/colorElementosOscuros"
            android:textAlignment="textStart"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repiteContrasenia"
            android:textColor="@color/colorElementosOscuros"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/manrope_medium"/>

        <EditText
            android:id="@+id/et_repitaPassword"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/verdePaloClaro"
            android:paddingVertical="6dp"
            android:paddingHorizontal="10dp"
            android:fontFamily="@font/manrope_bold"
            android:textColor="@color/colorElementosOscuros"
            android:textColorHint="@color/colorElementosOscuros"
            android:textAlignment="textStart"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirmar"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:text="Confirmar"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:background="@drawable/round_button"
        app:backgroundTint="@color/colorElementosClaros"
        android:textColor="@color/verdePaloMuyClaro"
        android:paddingHorizontal="40dp"/>
</LinearLayout>