<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdePaloMuyClaro"
    android:orientation="vertical"
    tools:context=".DeclaracionesCerosActivity">

    <TextView
        android:id="@+id/tv_declararCeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/declaraC"
        android:textColor="@color/colorElementosOscuros"
        android:textSize="24sp"
        android:fontFamily="@font/manrope_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/tv_rfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fillRFC"
        android:textColor="@color/colorElementosOscuros"
        android:textSize="20sp"
        android:fontFamily="@font/manrope_medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/forma"
        android:paddingVertical="20dp"
        android:paddingHorizontal="20dp"
        android:elevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nota"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/verdePaloMuyClaro"
            android:fontFamily="@font/manrope_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notaDeclaraC"
            android:textSize="16sp"
            android:textColor="@color/verdePaloMuyClaro"
            android:fontFamily="@font/manrope_medium"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:text="Confirmar"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:fontFamily="@font/manrope_bold"
        android:background="@drawable/round_button"
        app:backgroundTint="@color/colorElementosClaros"
        android:textColor="@color/verdePaloMuyClaro"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="120dp"/>

</LinearLayout>